# framework

./: .env  .gitignore  LICENCE  MANIFEST.in  README.md  SonarQube.md  app.py  cli.py  implementacion.py  implementacion2.py  main.py  p.py  pyproject.toml  reactor  reactor.py  requirements.txt  ruff.toml  setup.py  sonarlint.json  test.py  test_output.txt  test_singleton.py  test_stringable_basic.py  test_thread_safety.py  workflow.py
.github/workflows/: test.yml
app/console/: scheduler.py
app/contracts/: welcome_service.py
app/exceptions/: handler.py
app/facades/: welcome.py  welcome.pyi
app/providers/: app_service_provider.py  welcome_provider.py
app/services/: welcome_service.py
bootstrap/: app.py
config/: app.py  auth.py  cache.py  cors.py  database.py  filesystems.py  http.py  logging.py  mail.py  paths.py  queue.py  session.py  testing.py
foundation/exceptions/: test_foundation_config_exceptions.py
orionis/: __init__.py  _application.py  app.py  application.py  console.py  framework.py  framework_api.py  importscan.py  main.py  unittesting.py
orionis/_console/: kernel.py
orionis/_container/: container.py  container_integrity.py  resolve.py
orionis/_contracts/: application.py
orionis/_facades/: app_facade.py
orionis/_providers/: service_provider.py
orionis/console/: command_filter.py  kernel.py  parser.py
orionis/container/: container.py  resolver.py
orionis/failure/: catch.py
orionis/foundation/: application.py  core_config.py  core_exception_handler.py  core_kernels.py  core_paths.py  core_providers.py  core_scheduler.py
orionis/http/: kernel.py  pipeline.py  request.py  response.py  static_assets.py  status.py
orionis/installer/: manager.py  output.py  setup.py  version.py
orionis/luminate/: _application.py  app.py  application.py
orionis/metadata/: framework.py  package.py
orionis/test/: PROCEDURE sp_replenish_tasks IS.sql  __init__.py  kernel.py  test_suite.py
routes/: api.py  console.py  web.py
tests/: test_20250607_222002.json  test_20250607_222533.json  test_example.py
tests/config/: test_app.py  test_auth.py  test_cache.py
tests/console/: test_args.py  test_base_command.py  test_base_contracts_command.py  test_base_contracts_listener.py  test_base_contracts_scheduler.py  test_base_listener.py  test_base_scheduler.py  test_cli_argument.py  test_core_contracts_loader.py  test_core_contracts_progress_bar.py  test_core_contracts_reactor.py  test_core_dumper.py  test_core_loader.py  test_core_reactor.py  test_entities_command.py  test_entities_task.py  test_entities_task_event.py  test_enums_actions.py  test_enums_states.py  test_enums_styles.py  test_fluent_command.py  test_fluent_contracts_task.py  test_fluent_task.py  test_kernel.py  test_output_cli_request.py  test_output_console.py  test_output_contracts_executor.py  test_output_contracts_http_request.py  test_output_executor.py  (+6 more)
(+1447 files in other folders)
