[project]
name = "orionis"
version = "0.750.0"
description = "Orionis Framework — Async-first full-stack framework for modern Python applications."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler~=3.11.0",
    "cryptography~=46.0.0",
    "dotty-dict~=1.3.0",
    "granian[dotenv,pname,reload,uvloop,winloop]>=2.7.0",
    "pendulum~=3.2.0",
    "psutil~=7.2.0",
    "pyclean~=3.5.0",
    "python-dotenv~=1.2.0",
    "rich~=14.3.0",
    "ruff>=0.14.14",
    "setuptools~=80.10.0",
    "twine~=6.2.0",
    "uvloop>=0.22.1 ; sys_platform != 'win32'",
    "wheel~=0.46.0",
    "winloop>=0.5.0 ; sys_platform == 'win32'",
]
